# MergeBlocker

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_401_FIX.md  app.py  code_analyzer.py  config.py  deploy.sh  docker-compose.prod.yaml  docker-compose.yaml  generate-env.sh  github_client.py  pyproject.toml  pytest.ini  requirements.txt  start-local.sh  webhook_handler.py
.github/workflows/: deploy.yaml  test.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_GUARANTEES.md  DOCKER_OPTIMIZATION.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUART_MIGRATION.md  QUICK_START.md  README.md  SETUP_GUIDE.md  SETUP_REPLY_FUNCTIONALITY.md  TESTING.md  TESTS_ASYNC_UPDATE.md  UPGRADE_CLAUDE.md
src/: config.py
src/analysis/: code_analyzer.py  prompts.py  review_formatter.py
src/clients/: github_client.py  llm_client.py
src/handlers/: webhook_handler.py
src/scripts/: __init__.py  validate_credentials.py
src/utils/: async_retry.py
tests/: README.md  __init__.py  conftest.py  test_code_analyzer.py  test_llm_integration.py  test_retry_logic.py  test_webhook_handler.py
